--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "airbnb", 
-        "plugin:prettier/recommended" 
-    ],
+    "extends": [ "airbnb", "plugin:prettier/recommended" ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
