--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
 SKIP_PREFLIGHT_CHECK=true 
-=======
-SKIP_PREFLIGHT_CHECK=true 
->>>>>>> 7ee4e650b8e2cb5d9c461ea38f51c809338e4dbe
+REACT_APP_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc0RldiI6dHJ1ZSwiaWF0IjoxNjA1MTI4NDI0fQ.4ompplf0LGU7iZ-CVAQhklaUUYyZSsddlXZN3apdssM
+REACT_APP_API=http://localhost:3000/api/v1
