--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "react-dom": "^17.0.0",
     "react-dotenv": "^0.1.2",
     "react-player": "^2.6.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "react-validation": "^3.0.7",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
@@ -53,6 +58,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
